// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a text children 1`] = `
<Default__StyledSpan>
  <RedTheme
    key=".0"
  >
    This is a text
  </RedTheme>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <RedTheme
    key=".0"
  >
    <div />
  </RedTheme>
</Default__StyledSpan>
`;
